# case-conversion-api

./: .env.dev  .env.prod  .env.staging  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  PERFORMANCE.md  PERFORMANCE_ARCH_DEEP_DIVE.md  README.md  SECURITY.md  docker-compose-load.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stagging.yml  docker-compose.staging.yml  docker-compose.yml  nginx.conf  test.js  word-case-api.sln
.github/: CODE_OF_CONDUCT.md
.github/workflows/: codeql.yml  cpp-ci-DLL-all.yml  cpp-ci-all-plat.yml  cpp-ci.yml  cpp-quality-guard.yml  cpp-quality.yml  deploy.yml  docker-build.yml  docker-hub-distribution.yml  dotnet-api.yml  dotnet-integration-tests.yml  dotnet-tests.yml  frontend-ci.yml  full-stack-orchestration.yml  linux-engine-validation.yml  native-engine-ci_DLL.yml  native-engine-ci_Non_DLL.yml  production-release.yml  release.yml  security-analysis.yml  telemetry-ci.yml  telemetry-e2e-verification.yml
CaseConversionAPI/: .gitignore  README.md
CaseConversionAPI/CppLib/: .gitignore  CMakeLists.txt  CMakeListsLocalApp.txt  README.md
CaseConversionAPI/CppLib/Scripts/: run.sh
CaseConversionAPI/CppLib/include/: Client.hpp  ConversionTypeEnum.hpp  IStringConversion.hpp  KebabCaseConversion.hpp  LowerCaseConversion.hpp  ProcessStringDLL.hpp  RemoveSpacesConversion.hpp  ReverseConversion.hpp  SnakeCaseConversion.hpp  TestHelpers.hpp  ToggleCaseConversion.hpp
CaseConversionAPI/CppLib/src/: AlternatingCaseConversion.cpp  CapitalizeWordsConversion.cpp  Client.cpp  KebabCaseConversion.cpp  LeetSpeakConversion.cpp  LowerCaseConversion.cpp  ProcessString.cpp  ProcessStringDLL.cpp  RemoveVowelsConversion.cpp  SentenceCaseConversion.cpp  SnakeCaseConversion.cpp  StringConversionFactory.cpp  UpperCaseConversion.cpp  sourcecode.cpp
CaseConversionAPI/DotNetAPI/: DotNetAPI.csproj  Program.cs  Startup.cs
CaseConversionAPI/DotNetAPI/Controllers/: WordCaseController.cs
CaseConversionAPI/DotNetAPI/DotNetAPI/: DotNetAPI.slnx
CaseConversionAPI/DotNetAPI/DotNetAPI/DotNetAPI/: DotNetAPI.http  Program.cs
CaseConversionAPI/DotNetAPI/DotNetAPI/DotNetAPI.Tests/: ApiTests.cs  DotNetAPI.Tests.csproj
CaseConversionAPI/DotNetAPI/DotNetAPI/DotNetAPI/Properties/: launchSettings.json
CaseConversionAPI/DotNetAPI/Models/: ConvertRequest.cs  ConvertResponse.cs
CaseConversionAPI/DotNetAPI/Services/: ProcessStringService.cs
CaseConversionAPI/tests/CppTests/: AdvStrConDLL.cpp  AdvStrTestDLL.cpp  AdvancedStringConversionTests.cpp  StringConversionTests.cpp
CaseConversionAPI/tests/DotNetTests/: ApiTests.cs  DotNetAPI.Tests.csproj
CaseConversionAPI/tests/DotNetTests/Advanced/: AdvancedConversionBase.cs
CaseConversionAPI/tests/DotNetTests/Basic/: BasicConversionBase.cs
CaseConversionAPI/tests/DotNetTests/Contract/: InvalidInputTests.cs
CaseConversionAPI/tests/DotNetTests/EdgeCases/: EdgeCaseTests.cs
CaseConversionAPI/tests/DotNetTests/Fixtures/Fixtures/: ApiTestBase.cs
backend/: Dockerfile  word-case-api.sln
backend/CaseConversionAPI/: README.md
backend/CaseConversionAPI/CppLib/: .gitignore  CMakeLists.txt  CMakeListsLocalApp.txt  README.md
backend/CaseConversionAPI/CppLib/Scripts/: orchestrate-native.sh  run-local-app.sh  run.sh
backend/CaseConversionAPI/CppLib/include/: AlternatingCaseConversion.hpp  CapitalizeWordsConversion.hpp  Client.hpp  ConversionResult.hpp  ConversionTypeEnum.hpp  IStringConversion.hpp  InvertWordsConversion.hpp  KebabCaseConversion.hpp  LeetSpeakConversion.hpp  LowerCaseConversion.hpp  ProcessString.hpp  ProcessStringDLL.hpp  RemoveSpacesConversion.hpp  RemoveVowelsConversion.hpp  ReverseConversion.hpp  SentenceCaseConversion.hpp  SnakeCaseConversion.hpp  StringConversionFactory.hpp  TestHelpers.hpp  ToggleCaseConversion.hpp  UpperCaseConversion.hpp
backend/CaseConversionAPI/CppLib/src/: AlternatingCaseConversion.cpp  CapitalizeWordsConversion.cpp  Client.cpp  ConversionResult.cpp  InvertWordsConversion.cpp  KebabCaseConversion.cpp  LeetSpeakConversion.cpp  LowerCaseConversion.cpp  ProcessString.cpp  ProcessStringDLL.cpp  RemoveSpacesConversion.cpp  RemoveVowelsConversion.cpp  ReverseConversion.cpp  SentenceCaseConversion.cpp  SnakeCaseConversion.cpp  StringConversionFactory.cpp  ToggleCaseConversion.cpp  UpperCaseConversion.cpp  sourcecode.cpp
backend/CaseConversionAPI/DotNetAPI/: DotNetAPI.csproj  Program.cs  appsettings.Development.json  appsettings.Production.json  appsettings.json  run-tests.sh
backend/CaseConversionAPI/DotNetAPI/Controllers/: WordCaseController.cs
backend/CaseConversionAPI/DotNetAPI/Models/: ConvertRequest.cs  ConvertResponse.cs
backend/CaseConversionAPI/DotNetAPI/Services/: ProcessStringService.cs
backend/CaseConversionAPI/scripts/: create-structure.sh  orchestrate-service.sh  run-dotnet.sh  run-telemetry.sh  run-tests.sh  setup_structure.sh  validate-interop.sh
backend/CaseConversionAPI/tests/CppTests/: AdvStrTestDLL.cpp  AdvancedStringConversionTests.cpp  StringConversionTests.cpp
backend/CaseConversionAPI/tests/DotNetTests/: ApiTests.cs  DotNetAPI.Tests.csproj
backend/CaseConversionAPI/tests/DotNetTests/Advanced/: AdvancedConversionBase.cs
backend/database/procedures/: V1.0.0__Initialize_WordCaseDB.sql
docs/: PERFORMANCE.md  RELEASING.md  deployment.md
docs/LoadBalancer/: LOAD_BALANCER.md
docs/adr/: DECISION_LOG.md
docs/deployment/: deployment.md
docs/design/: DESIGN.md
docs/performance/: ARCH_DEEP_DIVE.md  PERFORMANCE.md
docs/releases/: v2.0.0.md  v2.1.0.md  v2.2.0.md
docs/setup/: README_Project_Setup.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/script/: init-frontend.sh  run-frontend.sh
frontend/src/: main.ts
frontend/src/api/: wordCaseApi.ts
releases/: v1.0.0.md
scripts/: create-ui-structure.sh  create_ms_api_structure.sh  init-ui-workspace.sh  run-dotnet.sh
string-conversion-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
string-conversion-ui/src/api/: wordCaseApi.ts
string-conversion-ui/src/ui/: converter.ts
(+4 files in other folders)
